fixed ui spacing & footer linkg, add animated svg

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1085,6 +1085,10 @@ input:checked + .toggle-bg {
   left: -0.75rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1095,6 +1099,10 @@ input:checked + .toggle-bg {
 
 .z-20 {
   z-index: 20;
+}
+
+.-z-10 {
+  z-index: -10;
 }
 
 .col-span-3 {
@@ -1146,14 +1154,14 @@ input:checked + .toggle-bg {
   margin-right: 1rem;
 }
 
-.my-32 {
-  margin-top: 8rem;
-  margin-bottom: 8rem;
-}
-
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
 }
 
 .mx-2 {
@@ -1285,6 +1293,10 @@ input:checked + .toggle-bg {
   display: none;
 }
 
+.aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -1377,6 +1389,10 @@ input:checked + .toggle-bg {
 
 .h-0 {
   height: 0px;
+}
+
+.h-\[60vh\] {
+  height: 60vh;
 }
 
 .h-\[180px\] {
@@ -1584,6 +1600,10 @@ input:checked + .toggle-bg {
 
 .list-none {
   list-style-type: none;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-2 {
@@ -2418,6 +2438,10 @@ input:checked + .toggle-bg {
   fill: #E3A008;
 }
 
+.fill-gray-300 {
+  fill: #D1D5DB;
+}
+
 .stroke-neutral-900 {
   stroke: #171717;
 }
@@ -3075,20 +3099,40 @@ body {
   display: inline-block;
 }
 
-.bg-section {
-  margin-top: 8rem;
-  margin-bottom: 8rem;
+.section {
   display: grid;
+  height: 70vh;
   grid-template-columns: repeat(3, minmax(0, 1fr));
+  align-content: center;
   align-items: center;
-  justify-content: center;
+  padding: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  .section {
+    height: 100vh;
+  }
+}
+
+.bg-section {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-  padding: 1.25rem;
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity));
+  display: grid;
+  height: 70vh;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  align-content: center;
+  align-items: center;
+  padding: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  .bg-section {
+    height: 100vh;
+  }
 }
 
 .dark .bg-section {
@@ -3096,30 +3140,6 @@ body {
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-@media (min-width: 768px) {
-  .bg-section {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
-  }
-}
-
-.section {
-  margin-top: 8rem;
-  margin-bottom: 8rem;
-  display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  align-items: center;
-  justify-content: center;
-  padding: 1.25rem;
-}
-
-@media (min-width: 768px) {
-  .section {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
-  }
 }
 
 .logo-circle {
@@ -3893,6 +3913,10 @@ body {
   fill: #D1D5DB;
 }
 
+.dark .dark\:fill-slate-800 {
+  fill: #1e293b;
+}
+
 .dark .dark\:stroke-white {
   stroke: #ffffff;
 }
@@ -4556,12 +4580,16 @@ body {
     height: 100%;
   }
 
-  .md\:h-\[250px\] {
-    height: 250px;
+  .md\:h-screen {
+    height: 100vh;
   }
 
   .md\:h-\[480px\] {
     height: 480px;
+  }
+
+  .md\:h-\[250px\] {
+    height: 250px;
   }
 
   .md\:w-48 {
